# backend-ccsl-2026

./: Dockerfile  README.md  SETUP.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/controller/: main.py
