[project]
name = "backend-ccsl-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dnspython>=2.8.0",
    "fastapi>=0.138.0",
    "redis>=8.0.1",
    "uvicorn[standard]>=0.49.0",
    "y-py>=0.6.2",
    "ypy-websocket>=0.12.4",
]

[project.scripts]
start-app = "app.controller.main:main"
